k8s/overlays/dev/keycloak-admin-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-admin
  namespace: pms-dev
  labels:
    app: keycloak
    purpose: admin-console
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30880
    protocol: TCP
    name: http
  selector:
    app: keycloak
